# FinGPT-Search-Agent

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  a2as.yaml  docker-compose.yml  make.ps1  pyproject.toml  readthedocs.yml
.github/workflows/: backend-deploy.yml  fingpt_for_sec_fingptbackend.yml
Deploy/: README.md
Deploy/podman/: Caddyfile.example
DevSummaries/: QA_ARKSIM_REPORT_2.md  QA_BENCHMARK_REPORT.md
DevSummaries/api/: API_DOCUMENTATION.md
DevSummaries/context_engineering/: UNIFIED_CONTEXT_DOCUMENTATION.md
DevSummaries/deep_research/: STREAMING_RESEARCH_ENGINE.md
DevSummaries/deployment/: 2026-02-02-memory-leak-fixes.md
DevSummaries/mcp/: 2026-01-30_tradingview-mcp-implementation.md
DevSummaries/strategy/: ARKSIM_USER_STORY.md  POSITIONING_STRATEGY.md  SPAC_VALIDATION_PIVOT.md
Docs/: frontend_backend_switch.md  podman_reverse_proxy.md  production_setup.md
Docs/plans/: 2026-01-15-playwright-integration-design.md  2026-02-01-prompt-architecture-design.md  2026-02-02-deployment-readiness-audit.md  2026-02-13-gemini-integration-design.md  2026-02-15-multi-step-research-design.md  2026-02-15-multi-step-research-impl.md  2026-02-15-research-mode-enhancement.md  2026-02-23-hallucination-mitigation-design.md  2026-02-23-hallucination-mitigation-impl.md  2026-02-23-memory-monitoring-upgrade-design.md  2026-02-23-memory-monitoring-upgrade-impl.md  2026-02-24-memory-leak-fixes.md  2026-02-24-options-and-agent-stability.md  2026-02-24-planner-skills-architecture.md
Docs/source/: api_reference.rst  case_studies.rst  code_of_conduct.rst  conf.py  index.rst  install_agent_with_installer.rst  introduction.rst  manual_install.rst  mcp_tools.rst  project_structure.rst  start_agent_mac.rst  start_agent_win.rst  updates.rst
Main/: README.md
Main/backend/: .dockerignore  .env.example  .env.production.example  API_DOCUMENTATION.md  BUGFIX_SINGLETON.md  CLEAN_REFACTOR_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENDPOINT_VERIFICATION.md  MEM0_FIXES_APPLIED.md  MEM0_MIGRATION_GUIDE.md  PLAYWRIGHT_INTEGRATION.md  Procfile  UNIFIED_CONTEXT_DOCUMENTATION.md  conftest.py  entrypoint.sh  export_requirements.py  gunicorn.conf.py  manage_deps.py  mcp_server_config.json  monitor_memory.py  package.json  playwright_mcp_config.json  pyproject.toml  simple_api_test.py  test_context_fix.py  test_models.py  test_unified_context.py  verify_context.py  verify_deployment.py
Main/backend/api/: apps.py  openai_views.py  pdf_upload.py  questionLog.csv  views.py  views_backup.py  views_complete.py  views_debug.py  views_refactored.py
Main/backend/api/middleware/: __init__.py  memory_tracker.py
Main/backend/api/utils/: __init__.py  leak_detector.py  llm_debug_logger.py  logging_filters.py  request_context.py  resource_monitor.py
Main/backend/axioms/: __init__.py  benchmark.py  engine.py  registry.py  resolver.py  sources.py  tool.py  wrapper.py
Main/backend/data/: preferred_links.json  site_map.json
Main/backend/datascraper/: R2C_README.md  calculator_tool.py  cdm_rag.py  context_integration.py  context_integration_enhanced.py  datascraper.py  datascraper_refactored.py  market_time.py  mem0_context_manager.py  models_config.py  numerical_validator.py  openai_search.py  openai_search_old.py  playwright_tools.py  preferred_links_manager.py  quality_logger.py  r2c_context_manager.py  research_engine.py  unified_context_manager.py  url_tools.py
Main/backend/django_config/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
Main/backend/mcp_client/: README.md  __init__.py  agent.py  apps.py  mcp_demo.py  mcp_loader.py  mcp_manager.py  mcp_servers.json  playwright_tools.py  prompt_builder.py  query_intent_analyzer.py  site_instructions.py  tool_wrapper.py
Main/backend/mcp_client/tools/: __init__.py  calculator.py  images.py  pdf_handler.py
Main/backend/mcp_server/: README.md  cache.py  errors.py  executor.py  validation.py  yahoo_finance_server.py  yahoo_finance_server.py.backup
Main/backend/mcp_server/handlers/: base.py  earnings_info.py  holders.py  options_chain.py  options_summary.py  stock_analysis.py  stock_financials.py  stock_history.py  stock_info.py  stock_news.py
Main/backend/mcp_server/tradingview/: __init__.py  scanner_api.py  server.py  validation.py
Main/backend/mcp_server/tradingview/handlers/: __init__.py  advanced_candle_pattern.py  base.py  bollinger_scan.py  coin_analysis.py  consecutive_candles.py  rating_filter.py  top_gainers.py  top_losers.py
Main/backend/mcp_server/xbrl/: parser.py  search.py  server.py  test_parser.py  us_gaap_2026.json
Main/backend/mcp_server/xbrl/filings/: aapl-20230930.xml  tsla-20231231.xml
Main/backend/planner/: plan.py  planner.py
Main/backend/planner/skills/: base.py  financial_statements.py  options_analysis.py  registry.py  stock_fundamentals.py  summarize_page.py  technical_analysis.py  web_research.py
Main/backend/prompts/: _security.md  core.md  default_site.md
Main/backend/prompts/sites/: finance.yahoo.com.md  sec.gov.md  tradingview.com.md
Main/backend/scripts/: mongo_client.py  test_insert_mongo.py
Main/backend/tests/: conftest.py  test_agent_tool_filtering.py  test_axiom_integration.py  test_axiom_resolver.py  test_axiom_wrapper.py  test_axioms.py  test_calculator_tool.py  test_debug_memory_endpoint.py  test_earnings_serialization.py  test_financials_serialization.py  test_hallucination_mitigation.py  test_leak_detector.py  test_numerical_validator.py  test_openai_api.py  test_options_summary.py  test_planner.py  test_planner_integration.py  test_prompt_builder.py  test_prompt_invariants.py  test_research_config.py  test_research_engine.py  test_resource_snapshot_enhanced.py  test_skills.py  test_stock_analysis_serialization.py  test_timed_cache.py
Main/frontend/: Dockerfile.dev  build-css.js  bunfig.toml  check-dist.js  package-lock.json  package.json  (+2 more)
Requirements/: requirements_mac.txt  requirements_win.txt
scripts/: install_all.py
tmp/: auto_validate_demo.md
(+38 files in other folders)
