[project]
name = "fingpt-backend"
version = "0.10.1"
description = "FinGPT Backend - Financial GPT Assistant"
authors = [{ name = "FinGPT Team" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4==4.12.3",
    "django-request==1.6.3",
    "google==3.0.0",
    "markdown==3.7",
    "numpy>=2.2.0,<3",
    "openai>=1.86.0,<2",
    "openai-agents>=0.0.17,<0.0.18",
    "anthropic>=0.67.0,<0.68",
    "mem0ai>=1.0.0,<2",
    "tiktoken>=0.11.0,<0.12",
    "requests==2.32.4",
    "pytz>=2024.1,<2025",
    "python-dotenv>=1.0.1,<2",
    "bs4>=0.0.2,<0.0.3",
    "django-cors-headers>=4.7.0,<5",
    "django-ratelimit>=4.1.0,<5",
    "pytest>=8.4.0,<9",
    "flask>=3.1.0,<4",
    "mcp[cli]>=1.9.0,<2",
    "fastmcp>=2.8.0,<3",
    "django-mcp>=0.3.0,<0.4",
    "gunicorn>=21.2.0,<24",
    "whitenoise>=6.6.0,<7",
    "sec-edgar-mcp>=0.1.0",
    "Django==5.2.9 ; sys_platform == 'win32'",
    "Django==5.2.9 ; sys_platform == 'darwin'",
    "Django==5.2.9 ; sys_platform == 'linux'",
    "Django==5.2.9 ; sys_platform != 'win32' and sys_platform != 'darwin' and sys_platform != 'linux'",
    "mammoth>=1.9.0,<2 ; sys_platform == 'darwin'",
]

[dependency-groups]
docs = [
    "sphinx>=8.0.0,<9",
    "sphinx-rtd-theme==3.0.2",
    "nbsphinx==0.9.6",
    "nbsphinx-link==1.3.1",
    "sphinx-autobuild==2024.10.3",
    "sphinx-design==0.6.1",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
