[project]
name = "fingpt-backend"
version = "0.12.0"
description = "FinGPT Backend - Financial GPT Assistant"
authors = [{ name = "FinGPT Team" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4>=4.14.0,<5",
    "django-request>=1.7.0,<2",
    "google==3.0.0",
    "markdown>=3.10.0,<4",
    "numpy>=2.2.0,<3",
    "openai>=2.20.0,<3",
    "openai-agents>=0.8.3,<1",
    "anthropic>=0.79.0,<1",
    "mem0ai>=1.0.0,<2",
    "tiktoken>=0.12.0,<0.13",
    "requests>=2.32.5,<3",
    "pytz>=2025.1,<2027",
    "python-dotenv>=1.0.1,<2",
    "bs4>=0.0.2,<0.0.3",
    "django-cors-headers>=4.7.0,<5",
    "django-ratelimit>=4.1.0,<5",
    "pytest>=8.4.0,<10",
    "flask>=3.1.0,<4",
    "mcp[cli]>=1.26.0,<2",
    "fastmcp>=2.14.5,<3",
    "gunicorn>=25.0.0,<26",
    "whitenoise>=6.6.0,<7",
    "sec-edgar-mcp>=0.1.0",
    "Django>=6.0.2,<7 ; sys_platform == 'win32'",
    "Django>=6.0.2,<7 ; sys_platform == 'darwin'",
    "Django>=6.0.2,<7 ; sys_platform == 'linux'",
    "Django>=6.0.2,<7 ; sys_platform != 'win32' and sys_platform != 'darwin' and sys_platform != 'linux'",
    "mammoth>=1.9.0,<2 ; sys_platform == 'darwin'",
    "yfinance>=0.2.51",
    "playwright>=1.58.0,<2",
    "tradingview-ta>=3.3.0",
    "tradingview-screener>=3.0.0",
    "psutil>=7.0.0,<8",
    "exchange-calendars>=4.5.0",
]

[dependency-groups]
docs = [
    "sphinx>=8.0.0,<9",
    "sphinx-rtd-theme==3.0.2",
    "nbsphinx==0.9.6",
    "nbsphinx-link==1.3.1",
    "sphinx-autobuild==2024.10.3",
    "sphinx-design==0.6.1",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
]

[tool.uv]
package = false
override-dependencies = [
    "protobuf>=6.33.5",  # CVE-2026-0994: JSON recursion depth bypass (overrides mem0ai's <6 pin)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
